WeatherDashboard v0.05 - lots of bugs to work out...

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 </form>
             </div>
             <!--Search Results-->
-            <div class="col-12 col-sm-8">
-                <p>Placeholder Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto delectus, eos repudiandae beatae minus amet eligendi, ullam nostrum magnam voluptates veniam provident reiciendis ipsa cumque tenetur commodi, est cum consequuntur.</p>
+            <div class="col-12 col-sm-8 search-results">
             </div>
         </div>
     </main>
