WD v0.06 - pre-experiment checkpoint

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="container">
         <div class="row">
             <!--Search Form & History-->
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-md-4">
                 <label for="city-name">Search for a City:</label>
                 <form action="" class="input-group search-form">
                     <div>
@@ -33,12 +33,15 @@
                 </form>
             </div>
             <!--Search Results-->
-            <div class="col-12 col-sm-8 search-results">
+            <div class="col-12 col-md-8 search-results">
             </div>
         </div>
     </main>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js" 
+        integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw==" 
+        crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
