WD v1.0 - added Moment.js, added 5-day forecast, bug fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" 
         href="./assets/css/style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js"></script>
+
 <body>
     <header>
         <h1 class="navbar-brand">Weather Dashboard</h1>
@@ -39,9 +42,11 @@
     </main>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js" 
-        integrity="sha512-OyrI249ZRX2hY/1CAD+edQR90flhuXqYqjNYFJAiflsKsMxpUYg5kbDDAVA8Vp0HMlPG/aAl1tFASi1h4eRoQw==" 
-        crossorigin="anonymous"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js" integrity="sha512-GH132x5SDy3XT+8wcxzCvATbUV5BNF0l6ucLVbj5TY8qHDEAdh9WLcd+dCEEuyXFaD16A/5+OjuE+tkTkiBk6A==" crossorigin="anonymous"></script>
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
+
+<img src="" alt="">
