--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <button type="submit" class="btn btn-outline-secondary" value="submit"><i class="fa fa-search"></i></button>
                     </div>        
                 </form>
+                <div class="search-history">
+
+                </div>
             </div>
             <!--Search Results-->
             <div class="col-12 col-md-8 search-results">
@@ -48,5 +51,3 @@
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
-
-<img src="" alt="">
