WD v2.0 - complete, small coding cleanup required

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     </div>        
                 </form>
                 <div class="search-history">
-
+                    <ul class="search-list">
+                    </ul>
                 </div>
             </div>
             <!--Search Results-->
@@ -44,9 +45,8 @@
         </div>
     </main>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.js" integrity="sha512-GH132x5SDy3XT+8wcxzCvATbUV5BNF0l6ucLVbj5TY8qHDEAdh9WLcd+dCEEuyXFaD16A/5+OjuE+tkTkiBk6A==" crossorigin="anonymous"></script>
-    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
